rewrite proto generation
