# api/openapi-spec/api.swagger.yaml
@@ -1,6 +1,6 @@
 swagger: "2.0"
 info:
-  title: server/v1/services.proto
+  title: postmanq/v1/postmanq.proto
   version: version not set
 tags:
   - name: EventService
@@ -8,7 +8,53 @@ consumes:
   - application/json
 produces:
   - application/json
-paths: {}
+paths:
+  /v1/event:
+    post:
+      operationId: EventService_ReceiveEvent
+      responses:
+        "200":
+          description: A successful response.
+          schema:
+            $ref: '#/definitions/Event'
+        default:
+          description: An unexpected error response.
+          schema:
+            $ref: '#/definitions/Status'
+      parameters:
+        - name: uuid
+          in: query
+          required: false
+          type: string
+        - name: attempts_count
+          in: query
+          required: false
+          type: integer
+          format: int64
+        - name: from
+          in: query
+          required: false
+          type: string
+        - name: to
+          in: query
+          required: false
+          type: string
+        - name: data
+          in: query
+          required: false
+          type: string
+          format: byte
+        - name: template
+          in: query
+          required: false
+          type: string
+        - name: vars[string]
+          description: This is a request variable of the map type. The query format is "map_name[key]=value", e.g. If the map name is Age, the key type is string, and the value type is integer, the query parameter is expressed as Age["bob"]=18
+          in: query
+          required: false
+          type: string
+      tags:
+        - EventService
 definitions:
   Any:
     type: object
@@ -33,7 +79,7 @@ definitions:
         format: byte
       template:
         type: string
-      vars:
+      vars[string]:
         type: object
         additionalProperties:
           type: string
